--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,7 @@
       "projectType": "library",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "sass"
+          "style": "scss"
         }
       },
       "root": "projects/ngx-dadata-controls",
@@ -47,7 +47,7 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "sass"
+          "style": "scss"
         }
       },
       "root": "projects/demo",
@@ -68,7 +68,7 @@
               "projects/demo/src/assets"
             ],
             "styles": [
-              "projects/demo/src/styles.sass"
+              "projects/demo/src/styles.scss"
             ],
             "scripts": []
           },
@@ -133,7 +133,7 @@
               "projects/demo/src/assets"
             ],
             "styles": [
-              "projects/demo/src/styles.sass"
+              "projects/demo/src/styles.scss"
             ],
             "scripts": []
           }
